{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 16,
  "lineage": "4f65f38d-3709-9d20-d440-a6a9fc8db7bf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bb0a616c1617b449",
            "arn": "arn:aws:ec2:us-east-1:160411641526:elastic-ip/eipalloc-0bb0a616c1617b449",
            "domain": "vpc",
            "id": "eipalloc-0bb0a616c1617b449",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-216-127-34.compute-1.amazonaws.com",
            "public_ip": "3.216.127.34",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "nat-elastic-ip"
            },
            "tags_all": {
              "Name": "nat-elastic-ip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "160411641526",
            "id": "eipalloc-0bb0a616c1617b449",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-025d99823a4caad37",
            "arn": "arn:aws:ec2:us-east-1:160411641526:instance/i-072b2929484310769",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-072b2929484310769",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "project-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-000a28b45bc40766c"
              }
            ],
            "primary_network_interface_id": "eni-000a28b45bc40766c",
            "private_dns": "ip-10-0-1-16.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.16",
            "public_dns": "ec2-100-52-173-66.compute-1.amazonaws.com",
            "public_ip": "100.52.173.66",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ca725776f769ac44",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04423ebc48197c11b",
            "tags": {
              "Name": "project-app-server"
            },
            "tags_all": {
              "Name": "project-app-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03fe14fa130c6e911"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "160411641526",
            "id": "i-072b2929484310769",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_key_pair.project_key",
            "aws_security_group.app_sg",
            "aws_subnet.public_subnet_1",
            "aws_vpc.project_vpc",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "project_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160411641526:internet-gateway/igw-0a8c7f55644d312c1",
            "id": "igw-0a8c7f55644d312c1",
            "owner_id": "160411641526",
            "region": "us-east-1",
            "tags": {
              "Name": "project-internet-gateway"
            },
            "tags_all": {
              "Name": "project-internet-gateway"
            },
            "vpc_id": "vpc-0fd1ba2a0b450a5f2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "160411641526",
            "id": "igw-0a8c7f55644d312c1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "project_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bb0a616c1617b449",
            "association_id": "eipassoc-093424c024fb36b50",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-047e3b87b249e64f2",
            "network_interface_id": "eni-06430cba740675b07",
            "private_ip": "10.0.1.68",
            "public_ip": "3.216.127.34",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04423ebc48197c11b",
            "tags": {
              "Name": "project_nat_gateway"
            },
            "tags_all": {
              "Name": "project_nat_gateway"
            },
            "vpc_id": "vpc-0fd1ba2a0b450a5f2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "160411641526",
            "id": "nat-047e3b87b249e64f2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.project_igw",
            "aws_subnet.public_subnet_1",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160411641526:route-table/rtb-0f4336a4f270ead9e",
            "id": "rtb-0f4336a4f270ead9e",
            "owner_id": "160411641526",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-047e3b87b249e64f2",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table"
            },
            "tags_all": {
              "Name": "private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd1ba2a0b450a5f2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "160411641526",
            "id": "rtb-0f4336a4f270ead9e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.project_igw",
            "aws_nat_gateway.project_nat_gateway",
            "aws_subnet.public_subnet_1",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160411641526:route-table/rtb-0d4e3ca0e17a4eff1",
            "id": "rtb-0d4e3ca0e17a4eff1",
            "owner_id": "160411641526",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a8c7f55644d312c1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd1ba2a0b450a5f2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "160411641526",
            "id": "rtb-0d4e3ca0e17a4eff1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.project_igw",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1edb287a89395ea",
            "region": "us-east-1",
            "route_table_id": "rtb-0f4336a4f270ead9e",
            "subnet_id": "subnet-00a07d71c5ad3de9f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "160411641526",
            "id": "rtbassoc-0f1edb287a89395ea",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_internet_gateway.project_igw",
            "aws_nat_gateway.project_nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_1",
            "aws_subnet.public_subnet_1",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00fb5ff6332e8a174",
            "region": "us-east-1",
            "route_table_id": "rtb-0d4e3ca0e17a4eff1",
            "subnet_id": "subnet-04423ebc48197c11b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "160411641526",
            "id": "rtbassoc-00fb5ff6332e8a174",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.project_igw",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_1",
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160411641526:security-group/sg-03fe14fa130c6e911",
            "description": "Allow inbound web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03fe14fa130c6e911",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-security-group",
            "name_prefix": "",
            "owner_id": "160411641526",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-security-group"
            },
            "tags_all": {
              "Name": "app-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd1ba2a0b450a5f2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "160411641526",
            "id": "sg-03fe14fa130c6e911",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160411641526:subnet/subnet-00a07d71c5ad3de9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a07d71c5ad3de9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "160411641526",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnets-1"
            },
            "tags_all": {
              "Name": "private-subnets-1"
            },
            "vpc_id": "vpc-0fd1ba2a0b450a5f2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "160411641526",
            "id": "subnet-00a07d71c5ad3de9f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160411641526:subnet/subnet-04423ebc48197c11b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04423ebc48197c11b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "160411641526",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0fd1ba2a0b450a5f2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "160411641526",
            "id": "subnet-04423ebc48197c11b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.project_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "project_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:160411641526:vpc/vpc-0fd1ba2a0b450a5f2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-066f361aadd0d6829",
            "default_route_table_id": "rtb-0db006192a6394847",
            "default_security_group_id": "sg-056cc01a57fd524bc",
            "dhcp_options_id": "dopt-029b455d0b5d1ad20",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fd1ba2a0b450a5f2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0db006192a6394847",
            "owner_id": "160411641526",
            "region": "us-east-1",
            "tags": {
              "Name": "mag-project-vpc"
            },
            "tags_all": {
              "Name": "mag-project-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "160411641526",
            "id": "vpc-0fd1ba2a0b450a5f2",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}